--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,13 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+    maven{
+        url  'https://oss.sonatype.org/content/repositories/snapshots/'
+        name 'OSS-Sonatype'
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -31,5 +38,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'org.osmdroid:osmdroid-android:6.0.3'
 }
